<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="mass_kg">Mass [KG]:</string>
    <string name="mass_lb">Mass [lb]:</string>
    <string name="provide_mass">Provide mass</string>
    <string name="height_m">Height [m]:</string>
    <string name="height_in">Height [in]:</string>
    <string name="provide_height">Provide height</string>
    <string name="count_button">COUNT</string>
    <string name="select_units">Select units</string>
    <string name="kg_m_units">Kg / m</string>
    <string name="lb_in_units">lb / in</string>
    <string name="bmi_display">BMI</string>
    <string name="err_invalid_input">Provide valid input</string>
    <string name="save_item_title">Save</string>
    <string name="about_author">About author</string>
    <string name="my_face_descr">My face</string>
    <string name="my_name">Przemysław Szeliński</string>
    <string name="back_button_descr">Navigate to main screen</string>
    <string name="on_state_saved">Saved</string>
    <string name="on_state_deleted">Save deleted</string>
    <string name="delete_save">Delete save</string>

</resources>
